[package]
name = "solana-unified-scheduler-pool"
description = "The Solana unified scheduler pool"
documentation = "https://docs.rs/solana-unified-scheduler-pool"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
cpu-time = "1.0.0"
ahash = { workspace = true }
assert_matches = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
derivative = { workspace = true }
enum-ptr = { path = "../../enum-ptr/enum-ptr" }
log = { workspace = true }
qualifier_attr = { workspace = true }
scopeguard = { workspace = true }
solana-cost-model = { workspace = true }
solana-ledger = { workspace = true }
solana-perf = { workspace = true }
solana-program-runtime = { workspace = true }
solana-poh = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-timings = { workspace = true }
solana-unified-scheduler-logic = { workspace = true }
static_assertions = { workspace = true }
vec_extract_if_polyfill = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
lazy_static = { workspace = true }
solana-logger = { workspace = true }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[features]
dev-context-only-utils = []
